Misc page tools visual fixes
- Fixes extra spacing introduced in https://gerrit.wikimedia.org/r/c/mediawiki/skins/Vector/+/877239
- Addresses last of design adjustments in https://phabricator.wikimedia.org/T324877#8519138

Bug: T324877

--- a/resources/skins.vector.styles/components/Dropdown.less
+++ b/resources/skins.vector.styles/components/Dropdown.less
@@ -33,6 +33,7 @@
 		}
 
 		.vector-feature-page-tools-enabled & {
+			padding: 4px 0;
 			// TODO Add consistent min/max values for dropdowns in T316055
 			width: max-content;
 			max-width: 200px;
