--- a/resources/skins.vector.styles/components/MainMenu.less
+++ b/resources/skins.vector.styles/components/MainMenu.less
@@ -47,6 +47,8 @@
 .vector-feature-page-tools-enabled #vector-main-menu-pinned-container .vector-main-menu {
 	// Align the left edge of the text with the page container
 	margin-left: -@padding-horizontal-dropdown-menu-item;
+	// Align border under pinnable header with border under page title
+	margin-top: 11px;
 	padding: @padding-vertical-dropdown-menu-item @padding-horizontal-dropdown-menu-item;
 	background-color: @background-color-secondary--modern;
 
